--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Contact</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +51,6 @@
       </div>
     </div>
   </nav>
-
   <!-- Page Header -->
   <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
     <div class="overlay"></div>
